add_library(Output output.c)
add_library(SimpleOutput simple.c)
add_library(TextOutput text.c)
add_library(CSVOutput csv.c)
add_library(JSONOutput json.c)
add_library(vCardOutput vcard.c)
add_library(CalendarOutput calendar.c)


target_link_libraries(Output SimpleOutput)
target_link_libraries(Output TextOutput)
target_link_libraries(Output CSVOutput)
target_link_libraries(Output JSONOutput)
target_link_libraries(Output vCardOutput)
target_link_libraries(Output CalendarOutput)
